syntax = "proto3";

package phub;
// this proto file is for api.hello/srv.hello

message ChatReq{
  //用户语音转文字询问chatgpt内容
  string message = 1;
  repeated string devicesIds = 2;
  string homeId = 3;
}

message chatData{
  //机器人语音提示内容
  string tip = 1;
  //截取需要内容
  string exp = 2;
  //chatgpt返回内容
  string resp = 3;
}

message ChatRsp{
  int32 code = 1;
  string msg = 2;
  chatData data = 3;
}

service Chat{
  rpc Ask(ChatReq)returns(ChatRsp){};
}